added registration page.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/output.css" rel="stylesheet" />
     <title>Health Metrics Calculator</title>
   </head>
   <body>
-    <div id="app"></div>
-    <h1 class="text-6xl font-bold underline">
-      Hello world!
-    </h1>
+    <h1 class="text-6xl font-bold underline bg-red-600">Hello world!</h1>
+    <a class="btn btn-primary" href="">Click</a>
+    <a href="login.php">Login page</a>
+    <a href="test.html">Test php file</a>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
