small fixes to styling

--- a/register.html
+++ b/register.html
@@ -38,7 +38,7 @@
       href="https://fonts.googleapis.com/css2?family=Allura&family=Josefin+Sans&family=Lato:ital,wght@1,300&family=Roboto+Serif:opsz@8..144&family=Ysabeau+SC&display=swap"
       rel="stylesheet"
     />
-    <!-- <link href="/output.css" rel="stylesheet" /> -->
+    <link href="/output.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Section: Design Block -->
@@ -64,7 +64,11 @@
         <div class="card-body py-5 px-md-5">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-8">
-              <h2 class="fw-bold mb-5">Sign up now</h2>
+              <h2
+                class="fw-bold mb-5 text-3xl sm:text-5xl lg:text-8xl font-black"
+              >
+                Register
+              </h2>
               <form>
                 <!-- 2 column grid layout with text inputs for the first and last names -->
                 <div class="row">
